FIX: add left alignment on root

--- a/src/coin.css
+++ b/src/coin.css
@@ -1,6 +1,7 @@
 .coin-root {
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
 }
 .coin-texture, .coin-background {
     width: 100%;
